# youtubedl

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: main.yml
src/: config.rs  main.rs
src/handlers/: challenge.rs  download.rs  files.rs  mod.rs  status.rs  verify.rs
src/middleware/: auth.rs  logger.rs  mod.rs
src/models/: mod.rs  state.rs
src/services/: cache.rs  download.rs  mod.rs  youtube.rs
src/utils/: crypto.rs  helpers.rs  logger.rs  mod.rs
