[package]
name = "youtube-downloader"
version = "2.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
dashmap = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
regex = "1.0"
sha2 = "0.10"
md5 = "0.7"
num_cpus = "1.0"
which = "5.0" 
futures = "0.3.31"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
